fix: dark mode issue with card

--- a/src/components/Card/Card.sass
+++ b/src/components/Card/Card.sass
@@ -31,7 +31,7 @@
 
 	.Card_Content_Title
 		margin-bottom: 5px
-		color: $gray-dark
+		@include theme-color-graydark-else-white
 
 		&:last-child
 			margin-bottom: 0
